# hypermodern-python

./: .coverage 2  .coverage 3  .coverage 4  .pre-commit-config.yaml  LICENSE  noxfile.py  pyproject.toml  setup.cfg
src/hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
